src/app/language-selector/language-selector.component.css
.selectWrapper{
    margin-left: 6px;
    border-radius:36px;
    /*display:inline-block;
    overflow:hidden;*/
    background:#ffffff;
    border:1px solid #cccccc;
}

.selectBox{
    margin-left: 6px;
    border:0px;
    outline:none;
}

.bxs-flag-alt{
    padding-top: 3px;
    margin-right: 2px;
}

::ng-deep .list-country-flags {
    width: 160%;
}

@media (min-width: 360px) {

    .selectWrapper {
        margin-left: 5px;
        border-radius: 0;
        border: none;
    }

    .bxs-flag-alt {
        display: none;
    }

    app-language-selector div span {
        display: none;
    }

}

